# kagebu

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  ui.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.module_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
{{cookiecutter.module_name}}/docs/source/: conf.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: cli.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/: cli.py
