[tool.poetry]
name = "{{cookiecutter.module_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
{%- if cookiecutter.command_line_interface == 'y' %}
typer = "^0.3.2"
{%- endif %}

{%- if cookiecutter.command_line_interface == 'y' %}
[tool.poetry.scripts]
{{cookiecutter.module_name}}-cli = '{{cookiecutter.module_name}}.cli:app'
{%- endif %}

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
