[tool.poetry]
name = "{{cookiecutter.module_name}}"
version = "0.1.0"
# homepage = 
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
readme = "README.md"
packages = [
    { include = "{{ cookiecutter.module_name }}" },
]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
jedi = "<0.18.0"
sphinx = "^3.5.1"
sphinx-book-theme = "^0.0.39"
isort = "^5.7.0"
mypy = "^0.812"
pre-commit = "*"
pytest-cov = "*"
flake8 = "^3.8.4"
{%- if cookiecutter.command_line_interface == 'y' %}
typer = "^0.3.2"
{%- endif %}

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.black]
line-length = 120
include = '\.pyi?$'

{%- if cookiecutter.command_line_interface == 'y' %}
[tool.poetry.scripts]
{{cookiecutter.module_name}}-cli = '{{cookiecutter.module_name}}.cli:app'
{%- endif %}

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
